deploying-simple-hello-spring-app/hello-spring-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring
spec:
  selector:
    matchLabels:
      app: hello-spring
  template:
    metadata:
      labels:
        app: hello-spring
    spec:
      containers:
      - name: hello-spring
        image: jxlwqq/hello-spring:latest
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-spring-svc
spec:
  selector:
    app: hello-spring
  ports:
    - port: 8080
      targetPort: 8080
