deploying-simple-hello-spring-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-spring-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-spring-svc
                port:
                  number: 8080
  ingressClassName: nginx
